--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1.0, user-scalable=yes" />
-	<title>You looked!</title>
+	<title>You looked</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
